<resources>
    <string name="app_name">What to Cook</string>
    <string name="start_cooking">Start Cooking</string>
    <string name="servings">Servings</string>
    <string name="diet_restrictions">Diet Restriction</string>
    <string name="serving_restrictions">Serving Restriction</string>
    <string name="prep_time">Preparation Time</string>
    <string name="search">Search</string>
    <string name="recipe_name">Recipe Name</string>

</resources>
