<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/table">

    <TextView
        android:id="@+id/DietRestrictionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="90dp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/diet_restrictions" />

    <TextView
        android:id="@+id/ServingsRestrictionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/DietRestrictionTextView"
        android:layout_marginTop="227dp"
        android:text="@string/serving_restrictions"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/PreparationTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/DietRestrictionTextView"
        android:layout_marginBottom="135dp"
        android:text="@string/prep_time"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="22dp"
        android:onClick="onClickSearch"
        android:text="@string/search" />

    <Spinner
        android:id="@+id/diet_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="27dp"
        android:layout_marginTop="75dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />

    <Spinner
        android:id="@+id/servings_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/diet_spinner"
        android:layout_below="@+id/diet_spinner"
        android:layout_marginTop="67dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />

    <Spinner
        android:id="@+id/time_cook_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/servings_spinner"
        android:layout_below="@+id/servings_spinner"
        android:layout_marginTop="56dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />


</RelativeLayout>