<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/table">


    <ImageView
        android:id="@+id/recipe_list_thumbnail"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:scaleType="fitCenter"
        />

    <RelativeLayout
        android:id="@+id/recipe_list_text_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/recipe_list_thumbnail">

        <TextView
            android:id="@+id/recipe_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="17sp"
            android:text="@string/recipe_name"/>

        <TextView
            android:id="@+id/recipe_list_serving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recipe_list_title"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="2dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="11sp"
            android:text="@string/servings"/>

        <TextView
            android:id="@+id/recipe_list_preptime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below = "@+id/recipe_list_title"
            android:layout_toEndOf="@id/recipe_list_serving"
            android:layout_marginTop="2dp"
            android:textSize="11sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:text="@string/prep_time"/>

    </RelativeLayout>

    <ImageButton
        android:id="@+id/want_to_cook_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/internet"
        android:onClick="CookWithMe" />

</RelativeLayout>